# knAcr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  data  default.nix  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: dev.Dockerfile  dev.docker-compose.yml  devcontainer.json
.github/workflows/: main.yml  mkdocs.yml
configs/dev/: mkdocs.yml  requirements.dev.txt  requirements.test.txt
data/: acr_db.json
docs/: index.md  ref_lic.md
docs/ref/: ref_m.md
src/: main.py
src/container/fun/: acr_db.py
src/knacr/: main.py
src/knacr/constants/: types.py  versions.py
src/knacr/container/: acr_db.py  links.py
src/knacr/container/fun/: acr_db.py  format.py
src/knacr/data/: acr_db.json  catalogue_db.json  regex_db.json
src/knacr/errors/: custom_exceptions.py  custom_warnings.py
src/knacr/schemas/: acr_db.py
src/schemas/: acr_db.py
tests/data/: test_acr_db.py
tests/fixture/: data.py  links.py
